# telegramtastic

./: .dockerignore  .gitignore  Dockerfile  README.md  app-dm.py  app.py  build-multiarch.sh  docker-compose.yml  env.sample  meshtelegram.py  pyproject.toml  requirements.txt  test-printer.py
.github/workflows/: docker-build.yml
common/: common.py
database/: connection.py  models.py  repository.py
example-all-in-one/: .env.example  .gitignore  README.md  docker-compose.yml  meshtasticd.yaml  mosquitto.conf  setup.sh
